--- a/cmake-kayte/cmake-kayte/CMakeDCompiler.cmake.in
+++ b/cmake-kayte/cmake-kayte/CMakeDCompiler.cmake.in
@@ -1,4 +1,4 @@
-# < 2.8.10 backward compatibility
+# < 3.10 backward compatibility
 if(NOT CMAKE_PLATFORM_INFO_DIR)
   set(CMAKE_PLATFORM_INFO_DIR ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY})
 endif()
@@ -16,22 +16,26 @@ set(CMAKE_COMPILER_IS_DMD @CMAKE_COMPILER_IS_DMD@)
 set(CMAKE_D_COMPILER_LOADED 1)
 set(CMAKE_COMPILER_IS_MINGW @CMAKE_COMPILER_IS_MINGW@)
 set(CMAKE_COMPILER_IS_CYGWIN @CMAKE_COMPILER_IS_CYGWIN@)
+
 if(CMAKE_COMPILER_IS_CYGWIN)
   set(CYGWIN 1)
   set(UNIX 1)
 endif()
 
-set(CMAKE_D_COMPILER_ENV_VAR "DC")
+set(CMAKE_KAYTE_COMPILER_ENV_VAR "DC")
 
 if(CMAKE_COMPILER_IS_MINGW)
   set(MINGW 1)
 endif()
-set(CMAKE_D_SOURCE_FILE_EXTENSIONS d;di)
-set(CMAKE_D_IGNORE_EXTENSIONS h;H;o;O;obj;OBJ;def;DEF;rc;RC)
+
+set(CMAKE_KAYTE_SOURCE_FILE_EXTENSIONS kayte)
+set(CMAKE_KAYTE_IGNORE_EXTENSIONS h;H;o;O;obj;OBJ;def;DEF;rc;RC)
+
 # Prefer to use D's linker.
 # The D value 40 beats CXX value of 30 and C value of 10
-set(CMAKE_D_LINKER_PREFERENCE 40 )
-set(CMAKE_D_LINKER_PREFERENCE_PROPOGATES 1 )
+set(CMAKE_D_LINKER_PREFERENCE 40)
+set(CMAKE_D_LINKER_PREFERENCE_PROPAGATES 1)
+
 # Save compiler ABI information.
 set(CMAKE_D_SIZEOF_DATA_PTR "@CMAKE_D_SIZEOF_DATA_PTR@")
 set(CMAKE_D_COMPILER_ABI "@CMAKE_D_COMPILER_ABI@")
