updating cmake for D and Kayte

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,5 +22,5 @@ add_subdirectory(zlib)
 add_subdirectory(SDL2)
 add_subdirectory(kayyte)
 add_subdirectory(libogg-1.3.3)
-add_subdirectory(curl-7.54.0)
+add_subdirectory(curl)
 add_subdirectory(jpeg-8c)
