fixing cmake for D

--- a/src/openal-soft/1.23.1/CMakeLists.txt
+++ b/src/openal-soft/1.23.1/CMakeLists.txt
@@ -1,27 +1,31 @@
 cmake_minimum_required(VERSION 3.10)
-project(MyOpenALProject)
+project(MyOpenAL)
 
 # Find OpenAL
 find_package(OpenAL REQUIRED)
 
 # Add your source files
-set(SOURCE_FILES
-    src/main.cpp
-    src/audio.cpp
-    src/utils.cpp
-)
+#set(SOURCE_FILES
+#    src/main.cpp
+#    src/audio.cpp
+#    src/utils.cpp
+#)
 
 # Add your header files
 set(HEADER_FILES
-    include/audio.h
-    include/utils.h
+    include/AL/al.h
+    include/AL/alc.h
+    include/AL/alext.h
+    include/AL/efx-creative.h
+    include/AL/efx-presets.h
+    include/AL/efx.h
 )
 
 # Add executable target
-add_executable(MyOpenALExecutable ${SOURCE_FILES} ${HEADER_FILES})
+add_executable(MyOpenAL ${SOURCE_FILES} ${HEADER_FILES})
 
 # Include header directories
-target_include_directories(MyOpenALExecutable PRIVATE include)
+target_include_directories(MyOpenAL PRIVATE include)
 
 # Link OpenAL
-target_link_libraries(MyOpenALExecutable PRIVATE OpenAL::OpenAL)
+target_link_libraries(MyOpenAL PRIVATE OpenAL::OpenAL)
