--- a/cmake-kayte/cmake-kayte/CMakeDCompiler.cmake.in
+++ b/cmake-kayte/cmake-kayte/CMakeDCompiler.cmake.in
@@ -3,17 +3,17 @@ if(NOT CMAKE_PLATFORM_INFO_DIR)
   set(CMAKE_PLATFORM_INFO_DIR ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY})
 endif()
 
-set(CMAKE_D_COMPILER "@CMAKE_D_COMPILER@")
-set(CMAKE_D_COMPILER_ARG1 "@CMAKE_D_COMPILER_ARG1@")
-set(CMAKE_D_COMPILER_ID "@CMAKE_D_COMPILER_ID@")
-set(CMAKE_D_PLATFORM_ID "@CMAKE_D_PLATFORM_ID@")
+set(CMAKE_KAYTE_COMPILER "@CMAKE_KAYTE_COMPILER@")
+set(CMAKE_KAYTE_COMPILER_ARG1 "@CMAKE_KAYTE_COMPILER_ARG1@")
+set(CMAKE_KAYTE_COMPILER_ID "@CMAKE_KAYTE_COMPILER_ID@")
+set(CMAKE_KAYTE_PLATFORM_ID "@CMAKE_KAYTE_PLATFORM_ID@")
 @SET_MSVC_D_ARCHITECTURE_ID@
 set(CMAKE_AR "@CMAKE_AR@")
 set(CMAKE_RANLIB "@CMAKE_RANLIB@")
 set(CMAKE_LINKER "@CMAKE_LINKER@")
 set(CMAKE_COMPILER_IS_GDC @CMAKE_COMPILER_IS_GDC@)
 set(CMAKE_COMPILER_IS_DMD @CMAKE_COMPILER_IS_DMD@)
-set(CMAKE_D_COMPILER_LOADED 1)
+set(CMAKE_KAYTE_COMPILER_LOADED 1)
 set(CMAKE_COMPILER_IS_MINGW @CMAKE_COMPILER_IS_MINGW@)
 set(CMAKE_COMPILER_IS_CYGWIN @CMAKE_COMPILER_IS_CYGWIN@)
 
@@ -33,23 +33,23 @@ set(CMAKE_KAYTE_IGNORE_EXTENSIONS h;H;o;O;obj;OBJ;def;DEF;rc;RC)
 
 # Prefer to use D's linker.
 # The D value 40 beats CXX value of 30 and C value of 10
-set(CMAKE_D_LINKER_PREFERENCE 40)
-set(CMAKE_D_LINKER_PREFERENCE_PROPAGATES 1)
+set(CMAKE_KAYTE_LINKER_PREFERENCE 40)
+set(CMAKE_KAYTE_LINKER_PREFERENCE_PROPAGATES 1)
 
 # Save compiler ABI information.
-set(CMAKE_D_SIZEOF_DATA_PTR "@CMAKE_D_SIZEOF_DATA_PTR@")
-set(CMAKE_D_COMPILER_ABI "@CMAKE_D_COMPILER_ABI@")
+set(CMAKE_KAYTE_SIZEOF_DATA_PTR "@CMAKE_KAYTE_SIZEOF_DATA_PTR@")
+set(CMAKE_KAYTE_COMPILER_ABI "@CMAKE_KAYTE_COMPILER_ABI@")
 
-if(CMAKE_D_SIZEOF_DATA_PTR)
-  set(CMAKE_SIZEOF_VOID_P "${CMAKE_D_SIZEOF_DATA_PTR}")
+if(CMAKE_KAYTE_SIZEOF_DATA_PTR)
+  set(CMAKE_SIZEOF_VOID_P "${CMAKE_KAYTE_SIZEOF_DATA_PTR}")
 endif()
 
-if(CMAKE_D_COMPILER_ABI)
-  set(CMAKE_INTERNAL_PLATFORM_ABI "${CMAKE_D_COMPILER_ABI}")
+if(CMAKE_KAYTE_COMPILER_ABI)
+  set(CMAKE_INTERNAL_PLATFORM_ABI "${CMAKE_KAYTE_COMPILER_ABI}")
 endif()
 
-set(CMAKE_D_HAS_ISYSROOT "@CMAKE_D_HAS_ISYSROOT@")
-@CMAKE_D_OSX_DEPLOYMENT_TARGET_FLAG_CODE@
+set(CMAKE_KAYTE_HAS_ISYSROOT "@CMAKE_KAYTE_HAS_ISYSROOT@")
+@CMAKE_KAYTE_OSX_DEPLOYMENT_TARGET_FLAG_CODE@
 
-set(CMAKE_D_IMPLICIT_LINK_LIBRARIES "@CMAKE_D_IMPLICIT_LINK_LIBRARIES@")
-set(CMAKE_D_IMPLICIT_LINK_DIRECTORIES "@CMAKE_D_IMPLICIT_LINK_DIRECTORIES@")
+set(CMAKE_KAYTE_IMPLICIT_LINK_LIBRARIES "@CMAKE_KAYTE_IMPLICIT_LINK_LIBRARIES@")
+set(CMAKE_KAYTE_IMPLICIT_LINK_DIRECTORIES "@CMAKE_KAYTE_IMPLICIT_LINK_DIRECTORIES@")
